[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "airQ"
author = "Anjan Roy"
author-email = "anjanroy@yandex.com"
home-page = "https://github.com/itzmeanjan/airQ"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev=["flit"]

[tool.flit.sdist]
exclude=[
  "data/",
  "systemd/"
]

[tool.flit.scripts]
airQ = "airQ.app:main"
